--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,6 +27,7 @@ dist.dir=dist
 dist.jar=${dist.dir}/input_data_pegawai.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.jasperreports-5.0.0.jar=C:\\Users\\Lucipis.WIN-JD36QRH2T47.000\\Downloads\\Compressed\\File-Pendukung-Java\\File Pendukung\\library\\jasperreports-5.0.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -38,9 +39,10 @@ javac.classpath=\
     ${file.reference.commons-javaflow-20060411.jar}:\
     ${file.reference.commons-logging-1.1.jar}:\
     ${file.reference.groovy-all-1.7.5.jar}:\
-    ${file.reference.jasperreports-5.0.0.jar}:\
     ${file.reference.mysql-connector-java-5.1.18-bin.jar}:\
-    ${file.reference.mysql-connector-java-5.1.22-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.22-bin.jar}:\
+    ${file.reference.jasperreports-5.0.0.jar}:\
+    ${libs.MySQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
